ft: completed landing page

--- a/index.html
+++ b/index.html
@@ -24,5 +24,42 @@
             <a href="" class="login">Login</a>
         </div>
     </nav>
+    <div class="hero">
+        <img src="./images/Peter.png" alt="Photo of Peter">
+        <div class="hero__text">
+            <h2>WELCOME TO MY WEBSITE</h2>
+            <h1>I'm a Developer </h1>
+            <div class="social__icons">
+                <a href="https://www.instagram.com/peter__mfitumukiza/"> <i class="fa-brands fa-instagram"></i> </a>
+                <a href="https://twitter.com/MfitumukizaPet4"> <i class="fa-brands fa-twitter"></i> </a>
+                <a href="https://www.facebook.com/peter.mfitumukiza.1/"> <i class="fa-brands fa-facebook-f"></i> </a>
+                <a href=""> <i class="fa-brands fa-behance-square"></i> </a>
+                <a href="https://www.linkedin.com/in/peter-mfitumukiza-78b8a91b4/"> <i class="fa-brands fa-linkedin-in"></i> </a>
+            </div>
+            <div class="buttons">
+                <button class="btn"> View Work</button>
+                <button class="btn"> Hire Me</button>
+            </div>
+            <i class="fa-solid fa-chevron-down"></i>
+        </div>
+    </div>
+    <div class="about__me">
+        <img src="./images/Aimee.jpg" alt="Another photo of Peter">
+        <div class="about__text">
+            <h1>I am <span>Peter</span></h1>
+            <span>FULLSTACK WEB & MOBILE DEVELOPER</span>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
+                nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
+                nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <button class="halved__buttons">DOWNLOAD MY CV</button>
+        </div>
+    </div>
 </body>
 </html>
