--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <div class="links">
             <a href="">Home</a>
-            <a href="">About</a>
+            <a href="#about">About</a>
             <a href="">Services</a>
             <a href="">Portfolio</a>
             <a href="">Blog</a>
@@ -44,22 +44,29 @@
         </div>
     </div>
     <div class="about__me">
-        <img src="./images/Aimee.jpg" alt="Another photo of Peter">
-        <div class="about__text">
-            <h1>I am <span>Peter</span></h1>
-            <span>FULLSTACK WEB & MOBILE DEVELOPER</span>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
-                nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
-                nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="halved__buttons">DOWNLOAD MY CV</button>
+        <div class="main__heading">
+            <h1>About Me</h1>
+            <div class="underline"></div>
         </div>
+        <div id="about" class="about__container">
+            <img src="./images/Aimee.jpg" alt="Another photo of Peter">
+            <div class="about__text">
+                <h1>I am <span class="name">Peter</span></h1>
+                <span class="role">FULLSTACK WEB & MOBILE DEVELOPER</span>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
+                    nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <button class="halved__button">DOWNLOAD MY CV</button>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
