--- a/index.html
+++ b/index.html
@@ -63,10 +63,93 @@
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris 
                     nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <button class="halved__button">DOWNLOAD MY CV</button>
+                <button class="download__cv halved__btn"> DOWNLOAD MY CV </button>
             </div>
         </div>
-        
+    </div>
+    <div class="my__skills">
+        <div class="main__heading">
+            <h1>My Skills</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="skills">
+            <div class="skill">
+                <div class="skill__texts" style="width: 90%;">
+                    <span>Photoshop</span> <span>90%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 90%;" class="orange__line"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill__texts" style="width: 95%;">
+                    <span>HTML5 CSS3</span> <span>95%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 90%;" class="orange__line"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill__texts" style="width: 80%;">
+                    <span>Figma</span> <span>80%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 80%;" class="orange__line"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill__texts" style="width: 80%;">
+                    <span>Angular</span> <span>80%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 80%;" class="orange__line"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__texts" style="width: 65%;">
+                    <span>Illustator</span> <span>65%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 65%;" class="orange__line"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill__texts" style="width: 65%;">
+                    <span>React</span> <span>65%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 65%;" class="orange__line"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__texts" style="width: 90%;">
+                    <span>Adobe XD</span> <span>90%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 90%;" class="orange__line"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__texts" style="width: 90%;">
+                    <span>Node</span> <span>90%</span>
+                </div>
+                <div class="skill__lines">
+                    <div class="white__line"></div>
+                    <div style="width: 90%;" class="orange__line"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
