ft: desktop view for projects

--- a/index.html
+++ b/index.html
@@ -151,5 +151,61 @@
             </div>
         </div>
     </div>
+    <div class="my__projects">
+        <div class="main__heading">
+            <h1>Recent Projects</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="tags">
+            <span class="tag active__tag">All</span>
+            <span class="tag">Branding</span>
+            <span class="tag">Web Design</span>
+            <span class="tag">Mobile Development</span>
+        </div>
+        <div class="projects">
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 2.png" alt="Project 1">
+                <div class="overlay">
+                    <h2>Web Development</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 4.png" alt="Project 2">
+                <div class="overlay">
+                    <h2>Database Administration</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 3.png" alt="Project 3">
+                <div class="overlay">
+                    <h2>Mobile Development</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 2.png" alt="Project 1">
+                <div class="overlay">
+                    <h2>Web Development</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 4.png" alt="Project 2">
+                <div class="overlay">
+                    <h2>Database Administration</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./images/Screenshot 2022-03-10 132701 3.png" alt="Project 3">
+                <div class="overlay">
+                    <h2>Mobile Development</h2>
+                    <a href="">View Project</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
