--- a/index.html
+++ b/index.html
@@ -67,6 +67,38 @@
             </div>
         </div>
     </div>
+    <div class="my__services">
+        <div class="main__heading">
+            <h1>Services</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="services__container">
+            <div class="service">
+                <div class="icon__container">
+                    <i class="fa-solid fa-share-nodes"></i>
+                </div>
+                <h2>Web Development</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt 
+                    ut labore et dolore.</p>
+            </div>
+            <div class="service">
+                <div class="icon__container">
+                    <i class="fa-solid fa-globe"></i>
+                </div>
+                <h2>Web Development</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt 
+                    ut labore et dolore.</p>
+            </div>
+            <div class="service">
+                <div class="icon__container">
+                    <i class="fa-solid fa-desktop"></i>
+                </div>
+                <h2>Responsive Design</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt 
+                    ut labore et dolore.</p>
+            </div>
+        </div>
+    </div>
     <div class="my__skills">
         <div class="main__heading">
             <h1>My Skills</h1>
