ft-responsiveness fron some sections

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <a href="">Contact</a>
             <a href="" class="login">Login</a>
         </div>
+        <a href="" class="bars">
+            <i class="fa-solid fa-bars"></i>
+        </a>
     </nav>
     <div class="hero">
         <img src="./images/Peter.png" alt="Photo of Peter">
