--- a/index.html
+++ b/index.html
@@ -242,5 +242,43 @@
             </div>
         </div>
     </div>
+    <div class="blogs__and__articles">
+        <div class="main__heading">
+            <h1>Blogs and Articles</h1>
+            <div class="underline"></div>
+        </div>
+        <div class="blogs">
+            <div class="blog">
+                <img src="./images/blog-1 1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>Best Article by Peter Mfitumukiza</h2>
+                    <p>Other visual stylings like exposed brick and custom-made barber chairs combine with.</p>
+                    <button class="halved__btn read__story">READ STORY</button>
+                </div>
+            </div>
+            <div class="blog">
+                <img src="./images/blog-2 1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>Best Article by Peter Mfitumukiza</h2>
+                    <p>Other visual stylings like exposed brick and custom-made barber chairs combine with.</p>
+                    <button class="halved__btn read__story">READ STORY</button>
+                </div>
+            </div>
+            <div class="blog">
+                <img src="./images/blog-1 1-1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>Best Article by Peter Mfitumukiza</h2>
+                    <p>Other visual stylings like exposed brick and custom-made barber chairs combine with.</p>
+                    <button class="halved__btn read__story">READ STORY</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="main__heading">
+            <h1>Recent Projects</h1>
+            <div class="underline"></div>
+        </div>
+    </div>
 </body>
 </html>
