ft-footer-and-responsiveness

--- a/index.html
+++ b/index.html
@@ -276,9 +276,49 @@
     </div>
     <div class="contact">
         <div class="main__heading">
-            <h1>Recent Projects</h1>
+            <h1>Get In Touch</h1>
             <div class="underline"></div>
         </div>
+        <form>
+            <div class="form-control short__input">
+                <label for="name">Name</label>
+                <input type="text" id="name">
+            </div>
+            <div class="form-control short__input">
+                <label for="email">Email</label>
+                <input type="text" id="email">
+            </div>
+            <div class="form-control">
+                <label for="subject">Subject</label>
+                <input type="text" id="subject">
+            </div>
+            <div class="form-control">
+                <label for="message">Message</label>
+                <textarea id="message" ></textarea>
+            </div>
+            <button class="halved__btn send__message">SEND MESSAGE</button>
+        </form>
     </div>
+    <footer>
+        <div class="footer__icons">
+            <div class="icon__container">
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="icon__container">
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="icon__container">
+                <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="icon__container">
+                <i class="fa-brands fa-behance-square"></i>
+            </div>
+            <div class="icon__container">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </div>
+        </div>
+        <span>Copyright 2020 - All Right Reserved.</span>
+        <span>Designed by Peter.</span>
+    </footer>
 </body>
 </html>
