--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>Home - Peter Mfitumukiza</title>
 </head>
 <body>
@@ -17,11 +17,11 @@
         <div class="links">
             <a href="">Home</a>
             <a href="#about">About</a>
-            <a href="">Services</a>
-            <a href="">Portfolio</a>
-            <a href="">Blog</a>
-            <a href="">Contact</a>
-            <a href="" class="login">Login</a>
+            <a href="#services">Services</a>
+            <a href="#my__projects">Portfolio</a>
+            <a href="#blogs__and__articles">Blog</a>
+            <a href="#contact">Contact</a>
+            <a href="./login.html" class="login">Login</a>
         </div>
         <a href="" class="bars">
             <i class="fa-solid fa-bars"></i>
@@ -46,12 +46,12 @@
             <i class="fa-solid fa-chevron-down"></i>
         </div>
     </div>
-    <div class="about__me">
+    <div class="about__me"  id="about">
         <div class="main__heading">
             <h1>About Me</h1>
             <div class="underline"></div>
         </div>
-        <div id="about" class="about__container">
+        <div class="about__container">
             <img src="./images/Aimee.jpg" alt="Another photo of Peter">
             <div class="about__text">
                 <h1>I am <span class="name">Peter</span></h1>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="my__services">
+    <div class="my__services" id="services">
         <div class="main__heading">
             <h1>Services</h1>
             <div class="underline"></div>
@@ -186,7 +186,7 @@
             </div>
         </div>
     </div>
-    <div class="my__projects">
+    <div class="my__projects" id="my__projects">
         <div class="main__heading">
             <h1>Recent Projects</h1>
             <div class="underline"></div>
@@ -242,7 +242,7 @@
             </div>
         </div>
     </div>
-    <div class="blogs__and__articles">
+    <div class="blogs__and__articles" id="blogs__and__articles">
         <div class="main__heading">
             <h1>Blogs and Articles</h1>
             <div class="underline"></div>
@@ -274,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="main__heading">
             <h1>Get In Touch</h1>
             <div class="underline"></div>
