--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
             <input type="text" placeholder="Email Adress">
             <!-- <span class="label__forgot__password">Forgot Password?</span> -->
             <input type="password" placeholder="Password">
-            <button class="btn">Login</button>
+            <button class="btn"><a href="dashboard.html">Login</a></button>
         </form>
         <span class="divider">OR</span>
         <div class="auth__buttons">
