ft-completed dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,28 +13,109 @@
     <div class="sidebar">
         <img src="images/logo.png" alt="logo">
         <div class="current__user">
-            <img src="images/blog-2 1.png" alt="profile image">
+            <img src="images/blog-2 1.png" class="profile__img" alt="profile image">
             <div class="name__and__role">
-                <span>Mfitumukiza Peter</span>
-                <span>Admin</span>
+                <span class="name">Mfitumukiza Peter</span>
+                <span class="role">Admin</span>
             </div>
-            <ul>
-                <li>
-                    <a href="#">Dashboard</a>
-                </li>
-                <li>
-                    <a href="#">Blogs</a>
-                </li>
-                <li>
-                    <a href="#">Messages</a>
-                </li>
-                <li>
-                    <a href="#">Profile</a>
-                </li>
-                <li>
-                    <a href="">Logout</a>
-                </li>
-            </ul>
+        </div>
+        <ul class="dashboard__list">
+            <li>
+                <i class="fa-solid fa-house"></i><a href="#">Dashboard</a>
+            </li>
+            <li>
+                <i class="fa-brands fa-blogger"></i><a href="#">Blogs</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-message"></i><a href="#">Messages</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-user"></i><a href="#">Profile</a>
+            </li>
+            <li>
+                <i class="fa-solid fa-arrow-right-from-bracket"></i><a href="">Logout</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main__ground">
+        <header>
+            <div class="left__one">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="header__icons">
+                <i class="fa-solid fa-message"></i>
+                <i class="fa-solid fa-bell"></i>
+                <img src="images/blog-2 1.png" class="profile__img" alt="profile image">
+            </div>
+        </header>
+        <h1 class="welcome__text">Hi, Welcome back!</h1>
+        <div class="stats">
+            <div class="stat">
+                <span class="stat__number">432</span>
+                <span class="stat__text">Blog Posts</span>
+            </div>
+            <div class="stat" style="background-color: #FFF7CD;">
+                <span class="stat__number">200</span>
+                <span class="stat__text">Subscribers</span>
+            </div>
+            <div class="stat" style="background-color: #D0F2FF;">
+                <span class="stat__number">100k</span>
+                <span class="stat__text">Users</span>
+            </div>
+            <div class="stat" style="background-color: #FAE7D9;">
+                <span class="stat__number">500</span>
+                <span class="stat__text">Comments</span>
+            </div>
+            <div class="stat" style="background-color: #C8FACD;">
+                <span class="stat__number">200k</span>
+                <span class="stat__text">Visited your site</span>
+            </div>
+        </div>
+        <h1 class="welcome__text">Recent Blogs</h1>
+        <div class="blogs">
+            <div class="blog">
+                <img src="./images/blog-1 1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>Best article in the world by Peter Mfitumukiza</h2>
+                    <p>Other visual stylings like exposed brick and...</p>
+                    <div class="buttons">
+                        <button class="halved__btn read__story">READ STORY</button>
+                        <div class="edit__and__delete">
+                            <a href=""><i class="fa-solid fa-pen"></i></a>
+                            <a href=""><i class="fa-solid fa-trash"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="blog">
+                <img src="./images/blog-2 1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>How to make a portifolio using html and css</h2>
+                    <p>Other visual stylings like exposed brick and custom...</p>
+                    <div class="buttons">
+                        <button class="halved__btn read__story">READ STORY</button>
+                        <div class="edit__and__delete">
+                            <a href=""><i class="fa-solid fa-pen"></i></a>
+                            <a href=""><i class="fa-solid fa-trash"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="blog">
+                <img src="./images/blog-1 1-1.png" alt="Blog 1 cover photo">
+                <div class="blog__text">
+                    <h2>Best Article by Peter Mfitumukiza</h2>
+                    <p>Other visual stylings like exposed brick and custom...</p>
+                    <div class="buttons">
+                        <button class="halved__btn read__story">READ STORY</button>
+                        <div class="edit__and__delete">
+                            <a href=""><i class="fa-solid fa-pen"></i></a>
+                            <a href=""><i class="fa-solid fa-trash"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
