--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <nav>
-        <a href="">
-            <img src="./images/logo.png" alt="main logo">
-        </a>
+        <div class="img__and__close">
+            <a href="">
+                <img src="./images/logo.png" class="logo" alt="main logo">
+            </a>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
         <div class="links">
             <a href="">Home</a>
             <a href="#about">About</a>
@@ -318,5 +321,6 @@
         <span>Copyright 2020 - All Right Reserved.</span>
         <span>Designed by Peter.</span>
     </footer>
+    <script src="js/home.js"></script>
 </body>
 </html>
