--- a/login.html
+++ b/login.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">
-            <img src="./images/logo.png" alt="main logo">
-        </a>
+        <div class="img__and__close">
+            <a href="">
+                <img src="./images/logo.png" class="logo" alt="main logo">
+            </a>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
         <div class="links">
             <a href="index.html">Home</a>
             <a href="index.html#about">About</a>
@@ -21,9 +24,7 @@
             <a href="index.html#contact">Contact</a>
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
-        <a href="" class="bars">
-            <i class="fa-solid fa-bars"></i>
-        </a>
+        <i class="fa-solid fa-bars"></i>
     </nav>
     <div class="welcome__text">
         <h1> Login To Your Account </h1>
@@ -48,5 +49,6 @@
         <span>Privacy Policy</span>
         <span>Copyright@Peter 2022</span>
     </div>
+    <script src="js/home.js"></script>
 </body>
 </html>
